--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
     "vite": "^5.4.2",
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://planteagler.github.io/"
+  "homepage": "https://wtmcx.github.io/PlanetEaglerCraft"
 }
